// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Department: Represents departments within the organization.
Device: Represents devices in the CMDB.
Model: Represents device models.
DeviceLog: Records historical statuses and operations of devices.
Status: Represents device status.
Incident: Represents incidents related to devices.
Location: Represents locations where devices are situated.
Manufacturer: Represents manufacturers of devices and parts.
Role: Represents roles assigned to system users.
Software: Represents software that can be installed on devices.
Supplier: Represents suppliers providing devices and parts.
User: Represents system users interacting with the CMDB.
'''
}

Table Department {
    id INTEGER [primary key]
    name VARCHAR(100) 
    }

Table Device {
    id INTEGER [primary key]
    name VARCHAR(50) 
    model_id INTEGER 
    purchase_date DATETIME 
    warranty_expiry DATETIME 
    }

Table Model {
    id INTEGER [primary key]
    name VARCHAR(50) 
    manufacturer_id INTEGER 
    }

Table DeviceLog {
    id INTEGER [primary key]
    device_id INTEGER 
    date DATETIME 
    status_id INTEGER 
    }

Table Status {
    id INTEGER [primary key]
    name VARCHAR(50) 
    }

Table Incident {
    id INTEGER [primary key]
    device_id INTEGER 
    description VARCHAR(200) 
    date_reported DATETIME 
    }

Table Location {
    id INTEGER [primary key]
    name VARCHAR(100) 
    address VARCHAR(200) 
    }

Table Manufacturer {
    id INTEGER [primary key]
    name VARCHAR(50) 
    }

Table Role {
    id INTEGER [primary key]
    name VARCHAR(50) 
    }

Table Software {
    id INTEGER [primary key]
    name VARCHAR(100) 
    version VARCHAR(20) 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR(100) 
    contact_email VARCHAR(100) 
    contact_phone VARCHAR(20) 
    }

Table User {
    id INTEGER [primary key]
    first_name VARCHAR(50) 
    last_name VARCHAR(50) 
    email VARCHAR(100) 
    role_id INTEGER 
    }



// Relationships
    Ref: Device.(model_id) < Model.(id)
    Ref: Model.(manufacturer_id) < Manufacturer.(id)
    Ref: DeviceLog.(device_id) < Device.(id)
    Ref: DeviceLog.(status_id) < Status.(id)
    Ref: Incident.(device_id) < Device.(id)
    Ref: User.(role_id) < Role.(id)
